--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Pages Site</title>
+  <title>Alexandra Freeman</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
     <img src="assets/images/logo.png" alt="Logo" />
-    <h1>Welcome to My Website!</h1>
+    <h1>Hello!</h1>
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm a web developer with a passion for creating awesome websites.</p>
+    <p>I'm a scientist with a passion for creating awesome websites.</p>
     <img src="assets/images/hero.jpg" alt="Hero Image" />
   </section>
 
   <footer>
-    <p>Contact me at <a href="mailto:example@email.com">example@email.com</a></p>
+    <p>Contact me at <a href="mailto:alexastew19@gmail.com">alexastew19@gmail.com</a></p>
   </footer>
 
   <script src="js/script.js"></script>
