Add two new sections to index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <img src="assets/images/hero.jpg" alt="Hero Image" />
   </section>
 
+  <section id="skills">
+    <h3>Resume</h3>
+    <p>skills text</p>
+  </section>
+
+  <section id="resume">
+    <h4>Resume</h4>
+    <p>Resume text</p>
+  </section>
+
   <footer>
     <p>Contact me at <a href="mailto:alexastew19@gmail.com">alexastew19@gmail.com</a></p>
   </footer>
