--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section id="about">
     <h2>About Me</h2>
     <p>I'm a scientist with a passion for creating awesome websites.</p>
-    <img src="assets/images/hero.jpg" alt="Hero Image" />
+    <img src="assets/images/hero.png" alt="Hero Image" />
   </section>
 
   <section id="skills">
