Add overview section to index.html

--- a/index.html
+++ b/index.html
@@ -12,19 +12,25 @@
     <h1>Hello!</h1>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
+  <section id="overview">
+    <h2>Overview</h2>
     <p>I'm a scientist with a passion for creating awesome websites.</p>
     <img src="assets/images/hero.png" alt="Hero Image" />
   </section>
 
+  <section id="about">
+    <h3>About Me</h3>
+    <p>About me text.</p>
+    <img src="assets/images/hero.png" alt="Hero Image" />
+  </section>
+
   <section id="skills">
-    <h3>My skills</h3>
+    <h4>My skills</h4>
     <p>skills text</p>
   </section>
 
   <section id="resume">
-    <h4>Resume</h4>
+    <h5>Resume</h5>
     <p>Resume text</p>
   </section>
 
