Update index.html from html editor
Added Google font styles, updated header/footer headings and fonts.

--- a/index.html
+++ b/index.html
@@ -5,33 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alexandra Freeman</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Bricolage Grotesque' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Edu NSW ACT Foundation' rel='stylesheet'>
 </head>
 <body>
   <header>
-    <img src="assets/images/logo.png" alt="Logo" />
-    <h1>Hello!</h1>
+    <p> Alexandra Freeman </p>
   </header>
 
   <section id="overview">
-    <h2>Overview</h2>
+    <h1>Overview</h1>
     <p>I'm a scientist with a passion for creating awesome websites.</p>
-    <img src="assets/images/hero.png" alt="Hero Image" />
   </section>
 
   <section id="about">
-    <h3>About Me</h3>
+    <h1>About Me</h1>
     <p>About me text.</p>
-    <img src="assets/images/hero.png" alt="Hero Image" />
+    <img src="assets/images/hero.png" alt="Me" width="500" height="600"/>
   </section>
 
   <section id="skills">
-    <h4>My skills</h4>
+    <h1>My skills</h1>
     <p>skills text</p>
   </section>
 
   <section id="resume">
-    <h5>Resume</h5>
+    <h1>Resume</h1>
     <p>Resume text</p>
+  </section>
+  
+  
+  <section id="projects">
+    <h1>Projects</h1>
+    <p>Projects text</p>
   </section>
 
   <footer>
