Add my resume and skills to template website index.html

--- a/index.html
+++ b/index.html
@@ -17,23 +17,46 @@
 
   <section id="overview">
     <h1>Overview</h1>
-    <p>I'm a scientist with a passion for creating awesome websites.</p>
+    <p>
+I am particularly excited about interdisciplinary collaboration and am eager to apply my skills to real-world challenges in fields such as computational physics, AI Ethics, and probability theory. I thrive in dynamic, problem-solving environments and am constantly seeking opportunities to learn, collaborate, and push the boundaries of computational science.
+    </p>
   </section>
 
   <section id="about">
     <h1>About Me</h1>
-    <p>About me text.</p>
+    <p>As a second-year Master’s student at Georgia Tech specializing in Computational Science and Engineering, I am passionate about advancing our understanding of complex systems through the intersection of Physics and computational techniques. With my home unit in Physics, I have developed a strong foundation in scientific computing, probability theory, and high-performance computing (HPC), all of which serve as critical tools in my research and academic pursuits. My current interests lie in the application of machine learning to scientific problems, as well as exploring mesh and particle-based simulations to model physical systems more effectively. By leveraging computational methods and advanced algorithms, I aim to contribute to innovations in scientific modeling, data-driven discovery, and simulation-based optimization.</p>
     <img src="assets/images/hero.png" alt="Me" width="300" height="300"/>
   </section>
 
   <section id="skills">
     <h1>My skills</h1>
-    <p>skills text</p>
+      <h2> Tools & Packages </h2>
+        <p>Python, Github, MarkDown, LATEX, BASH, Linux, Jupyter Notebook, Google Colab, numpy, pandas, spack, conda C++, pytorch, tensorflow, Julia, R, MATLAB, Excel, Powerpoint.</p>
+      <h2> Communication</h2>  
+        <p>Leadership/Mentorship Skills, Lab Experience, Teaching, Excellent Presentation Skills, Excellent Communication Skills, Excellent Team Player.</p>
+      <h2> Quantitative Research</h2> 
+        <p>Mathematical optimization, quantitative/qualitative data management, machinelearning, data research methodologies, web scraping, data modelling, data visualization, statistical analysis, user research, data analysis, visualizations.</p>
   </section>
 
   <section id="resume">
     <h1>Resume</h1>
-    <p>Resume text</p>
+      <h3>Los Alamos National Laboratory, May 2023 — September 2023</h3>
+        <p>
+          Systematically determined bugs and installation issues of Accent on Linux VM and worked closely with developers to understand user-end software outcomes.
+          Leveraged git, BASH programming, Spack, and C++ API to integrate Ascent with LANL-developed physics simulation code.
+        </p>
+
+      <h3>MIT Undergraduate Research Program (UROP), MIT Anderson Lab</h3>
+        <p>
+          Supported Machine Learning algorithm for discovery of new molecular candidates for laboratory work.
+          Fully trained ML model using Pytorch and other relevant ML libraries for determining training/test data, cross-validation, and testing results.
+        </p>
+      <h3>Summer Student Finalist, Los Alamos National Laboratory, May 2022 — November 2022</h3>
+        <p>
+          Implemented Visualization codes using ParaView and LANL developed simulations.
+          Produced cinema quality explanatory videos on the domain science explaining to a broad audience.
+          Presented & Paper Submission Finalist at The International Conference for High Performance Computing in Dallas, TX (2022) and St. Louis, MO (2021).
+        </p>
   </section>
   
   
@@ -43,7 +66,10 @@
   </section>
 
   <footer>
-    <p>Contact me at <a href="mailto:alexastew19@gmail.com">alexastew19@gmail.com</a></p>
+    <p> Reach out to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing.<p>
+    <p>Email: <a href="mailto:alexastew19@gmail.com">alexastew19@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/alexa-r-f/">https://www.linkedin.com/in/alexa-r-f/</a></p>
+    
   </footer>
 
   <script src="js/script.js"></script>
