--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@ I am particularly excited about interdisciplinary collaboration and am eager to 
 
   <section id="about">
     <h1>About Me</h1>
-    <p>As a second-year Master’s student at Georgia Tech specializing in Computational Science and Engineering, I am passionate about advancing our understanding of complex systems through the intersection of Physics and computational techniques. With my home unit in Physics, I have developed a strong foundation in scientific computing, probability theory, and high-performance computing (HPC), all of which serve as critical tools in my research and academic pursuits. My current interests lie in the application of machine learning to scientific problems, as well as exploring mesh and particle-based simulations to model physical systems more effectively. By leveraging computational methods and advanced algorithms, I aim to contribute to innovations in scientific modeling, data-driven discovery, and simulation-based optimization.</p>
     <img src="assets/images/me.png" alt="Me" width="300" height="300" align="right"/>
+    <p>
+      As a second-year Master’s student at Georgia Tech specializing in Computational Science and Engineering, I am passionate about advancing our understanding of complex systems through the intersection of Physics and computational techniques. With my home unit in Physics, I have developed a strong foundation in scientific computing, probability theory, and high-performance computing (HPC), all of which serve as critical tools in my research and academic pursuits. My current interests lie in the application of machine learning to scientific problems, as well as exploring mesh and particle-based simulations to model physical systems more effectively. By leveraging computational methods and advanced algorithms, I aim to contribute to innovations in scientific modeling, data-driven discovery, and simulation-based optimization.
+    </p>
   </section>
 
   <section id="skills">
