Added logos and updated overview and about me text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section id="overview">
     <h1>Overview</h1>
     <p>
-I am particularly excited about interdisciplinary collaboration and am eager to apply my skills to real-world challenges in fields such as computational physics, AI Ethics, and probability theory. I thrive in dynamic, problem-solving environments and am constantly seeking opportunities to learn, collaborate, and push the boundaries of computational science.
+      I am passionate about advancing our understanding of complex systems through the intersection of Physics and computational techniques. I am particularly excited about interdisciplinary collaboration and am eager to apply my skills to real-world challenges in fields such as computational physics and AI Ethics. 
     </p>
   </section>
 
@@ -26,7 +26,7 @@ I am particularly excited about interdisciplinary collaboration and am eager to 
     <h1>About Me</h1>
     <img src="assets/images/me.png" alt="Me" width="300" height="300" align="right"/>
     <p>
-      As a second-year Master’s student at Georgia Tech specializing in Computational Science and Engineering, I am passionate about advancing our understanding of complex systems through the intersection of Physics and computational techniques. With my home unit in Physics, I have developed a strong foundation in scientific computing, probability theory, and high-performance computing (HPC), all of which serve as critical tools in my research and academic pursuits. My current interests lie in the application of machine learning to scientific problems, as well as exploring mesh and particle-based simulations to model physical systems more effectively. By leveraging computational methods and advanced algorithms, I aim to contribute to innovations in scientific modeling, data-driven discovery, and simulation-based optimization.
+      As a second-year Master’s student at Georgia Institute of Technology specializing in Computational Science and Engineering, I thrive in environments where seeking opportunities to learn, collaborate, and communicate pushes the boundaries of computational science. With my home unit in Physics, I have developed a strong foundation in scientific computing, probability theory, and high-performance computing (HPC), all of which serve as critical tools in my research and academic pursuits. My current interests lie in the application of machine learning to scientific problems, as well as exploring particle-based simulations to model physical systems more effectively. Through projects and research, I aim to contribute to innovations in scientific modeling, data-driven discovery, and simulation-based optimization.
     </p>
   </section>
 
@@ -40,20 +40,39 @@ I am particularly excited about interdisciplinary collaboration and am eager to 
         <p>Mathematical optimization, quantitative/qualitative data management, machinelearning, data research methodologies, web scraping, data modelling, data visualization, statistical analysis, user research, data analysis, visualizations.</p>
   </section>
 
+ <section id="education">
+   <h1>Education<h1>
+     <h2> 
+       Massachusetts Institute of Technology, Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022)
+     </h2>
+     <img src="assets/images/mit_logo.png" alt="MIT Logo" width="300" height="300" align="left"/>
+
+      <h2> 
+       Georgia Institute of Technology, M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025)
+     </h2>
+     <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="300" height="300" align="left"/>
+     
+ </section>
+  
   <section id="resume">
     <h1>Resume</h1>
+    
       <h3>Los Alamos National Laboratory, May 2023 — September 2023</h3>
+      <img src="assets/images/lanl_logo.png" alt="Lanl Logo" width="300" height="300" align="left"/>
         <p>
           Systematically determined bugs and installation issues of Accent on Linux VM and worked closely with developers to understand user-end software outcomes.
           Leveraged git, BASH programming, Spack, and C++ API to integrate Ascent with LANL-developed physics simulation code.
         </p>
 
       <h3>MIT Undergraduate Research Program (UROP), MIT Anderson Lab</h3>
+        <img src="assets/images/mit_logo.png" alt="MIT Logo" width="300" height="300" align="left"/>
         <p>
           Supported Machine Learning algorithm for discovery of new molecular candidates for laboratory work.
           Fully trained ML model using Pytorch and other relevant ML libraries for determining training/test data, cross-validation, and testing results.
         </p>
       <h3>Summer Student Finalist, Los Alamos National Laboratory, May 2022 — November 2022</h3>
+        <img src="assets/images/sc22.png" alt="Scientific Visualization Showcase 2022 Logo" width="300" height="300" align="left"/>
+        <img src="assets/images/sc21.png" alt="Scientific Visualization Showcase 2021 Logo" width="300" height="300" align="left"/>
         <p>
           Implemented Visualization codes using ParaView and LANL developed simulations.
           Produced cinema quality explanatory videos on the domain science explaining to a broad audience.
@@ -62,9 +81,17 @@ I am particularly excited about interdisciplinary collaboration and am eager to 
   </section>
   
   
-  <section id="projects">
-    <h1>Projects</h1>
-    <p>Projects text</p>
+  <section id="awards">
+    <h1>Publications and Awards</h1>
+    <p>
+      Stewart, A., Terece L. Turton, David Rogers, James P. Ahrens, Soumya Dutta, (2022). Visualizing MFIX-Exa Codes for Chemical Looping Combustion.
+
+      Stewart, A., Lo, L.T., Korobkin, O., Sagert, I., Loiseau, J., Lim, H., Kaltenborn, M., Mauney, C., & Miller, J.. (2021). Realistic Kilonova Up Close.
+
+      The International Conference for High Performance Computing: Scientific Visualization & Data Analytics Showcase, Finalist (2021).
+
+      The International Conference for High Performance Computing: Scientific Visualization & Data Analytics Showcase, Finalist (2020).
+    </p>
   </section>
 
   <footer>
