Changed 'resume' to 'selected experience'

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      
  </section>
   
-  <section id="resume">
+  <section id="Selected Experience">
     <h1>Resume</h1>
     
       <h3>Los Alamos National Laboratory, May 2023 — September 2023</h3>
