Updated Education section

--- a/index.html
+++ b/index.html
@@ -43,15 +43,21 @@
  <section id="education">
    <h1>Education<h1>
      <h2> 
-       Massachusetts Institute of Technology, Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022)
+       Massachusetts Institute of Technology
      </h2>
-     <img src="assets/images/mit_logo.png" alt="MIT Logo" width="100" height="40" align="left"/>
+      <img src="assets/images/mit_logo.png" alt="MIT Logo" width="100" height="40" align="left"/>
+     <p>Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022)</p>
+    <p>Relevant coursework: Computational Data Analytics, Numerical Linear Algebra, Modeling and Simulation,
+      Scientific Machine Learning, Machine Learning Data Analytics, Computational Physics.</p>
 
       <h2> 
-       Georgia Institute of Technology, M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025)
+       Georgia Institute of Technology
      </h2>
      <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="90" height="40" align="left"/>
-     
+     <p> M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025) </p>
+     <p> Relevant coursework: Mathematics for Computer Science, Differential Equations, Linear Algebra, Python
+Programming and Fundamentals, Introduction to Machine Learning, Fluid Dynamics, Statistical Physics,
+Quantum Mechanics I, Chemistry Thermodynamics, Laboratory Physics.</p>
  </section>
   
   <section id="Selected Experience">
