Fixed a bug in the Education h1 heading

--- a/index.html
+++ b/index.html
@@ -33,43 +33,39 @@
   <section id="skills">
     <h1>My skills</h1>
       <h2> Tools & Packages </h2>
-        <p>Python, Github, MarkDown, LATEX, BASH, Linux, Jupyter Notebook, Google Colab, numpy, pandas, spack, conda C++, pytorch, tensorflow, Julia, R, MATLAB, Excel, Powerpoint.</p>
+        <p> Python, Github, MarkDown, LATEX, BASH, Linux, Jupyter Notebook, Google Colab, numpy, pandas, spack, conda C++, pytorch, tensorflow, Julia, R, MATLAB, Excel, Powerpoint.</p>
       <h2> Communication</h2>  
         <p>Leadership/Mentorship Skills, Lab Experience, Teaching, Excellent Presentation Skills, Excellent Communication Skills, Excellent Team Player.</p>
-      <h2> Quantitative Research</h2> 
-        <p>Mathematical optimization, quantitative/qualitative data management, machinelearning, data research methodologies, web scraping, data modelling, data visualization, statistical analysis, user research, data analysis, visualizations.</p>
+      <h2> Quantitative Research </h2> 
+        <p> Mathematical optimization, quantitative/qualitative data management, machinelearning, data research methodologies, web scraping, data modelling, data visualization, statistical analysis, user research, data analysis, visualizations.</p>
   </section>
 
  <section id="education">
-   <h1>Education<h1>
-     <h2> 
-       Massachusetts Institute of Technology
-     </h2>
+   <h1>Education</h1>
+     <h2> Massachusetts Institute of Technology </h2>
       <img src="assets/images/mit_logo.png" alt="MIT Logo" width="100" height="40" align="left"/>
-     <p>Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022)</p>
-    <p>Relevant coursework: Computational Data Analytics, Numerical Linear Algebra, Modeling and Simulation,
-      Scientific Machine Learning, Machine Learning Data Analytics, Computational Physics.</p>
-
-      <h2> 
-       Georgia Institute of Technology
-     </h2>
-     <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="90" height="40" align="left"/>
-     <p> M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025) </p>
-     <p> Relevant coursework: Mathematics for Computer Science, Differential Equations, Linear Algebra, Python
-Programming and Fundamentals, Introduction to Machine Learning, Fluid Dynamics, Statistical Physics,
-Quantum Mechanics I, Chemistry Thermodynamics, Laboratory Physics.</p>
- </section>
+       <p> Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022) </p>
+       <p>
+        Relevant coursework: Computational Data Analytics, Numerical Linear Algebra, Modeling and Simulation,
+        Scientific Machine Learning, Machine Learning Data Analytics, Computational Physics.
+       </p>
+     <h2>  Georgia Institute of Technology </h2>
+       <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="90" height="40" align="left"/>
+       <p> M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025) </p>
+       <p> 
+         Relevant coursework: Mathematics for Computer Science, Differential Equations, Linear Algebra, Python Programming and Fundamentals, 
+         Introduction to Machine Learning, Fluid Dynamics, Statistical Physics, Quantum Mechanics I, Chemistry Thermodynamics, Laboratory Physics.
+      </p>
+   </section>
   
   <section id="Selected Experience">
     <h1>Resume</h1>
-    
       <h3>Los Alamos National Laboratory, May 2023 — September 2023</h3>
-      <img src="assets/images/lanl_logo.png" alt="Lanl Logo" width="90" height="20" align="left"/>
+        <img src="assets/images/lanl_logo.png" alt="Lanl Logo" width="90" height="20" align="left"/>
         <p>
           Systematically determined bugs and installation issues of Accent on Linux VM and worked closely with developers to understand user-end software outcomes.
           Leveraged git, BASH programming, Spack, and C++ API to integrate Ascent with LANL-developed physics simulation code.
         </p>
-
       <h3>MIT Undergraduate Research Program (UROP), MIT Anderson Lab</h3>
         <img src="assets/images/mit_logo.png" alt="MIT Logo" width="300" height="300" align="left"/>
         <p>
@@ -78,7 +74,7 @@ Quantum Mechanics I, Chemistry Thermodynamics, Laboratory Physics.</p>
         </p>
       <h3>Summer Student Finalist, Los Alamos National Laboratory, May 2022 — November 2022</h3>
         <img src="assets/images/sc22.png" alt="Scientific Visualization Showcase 2022 Logo" width="200" height="100" align="left"/>
-        <img src="assets/images/sc21.png" alt="Scientific Visualization Showcase 2021 Logo" width="180" height="100" align="left"/>
+        <img src="assets/images/sc21.png" alt="Scientific Visualization Showcase 2021 Logo" width="180" height="100" align="right"/>
         <p>
           Implemented Visualization codes using ParaView and LANL developed simulations.
           Produced cinema quality explanatory videos on the domain science explaining to a broad audience.
@@ -86,25 +82,18 @@ Quantum Mechanics I, Chemistry Thermodynamics, Laboratory Physics.</p>
         </p>
   </section>
   
-  
   <section id="awards">
     <h1>Publications and Awards</h1>
-    <p>
-      Stewart, A., Terece L. Turton, David Rogers, James P. Ahrens, Soumya Dutta, (2022). Visualizing MFIX-Exa Codes for Chemical Looping Combustion.
-
-      Stewart, A., Lo, L.T., Korobkin, O., Sagert, I., Loiseau, J., Lim, H., Kaltenborn, M., Mauney, C., & Miller, J.. (2021). Realistic Kilonova Up Close.
-
-      The International Conference for High Performance Computing: Scientific Visualization & Data Analytics Showcase, Finalist (2021).
-
-      The International Conference for High Performance Computing: Scientific Visualization & Data Analytics Showcase, Finalist (2020).
-    </p>
+     <p> Stewart, A., Terece L. Turton, David Rogers, James P. Ahrens, Soumya Dutta, (2022). Visualizing MFIX-Exa Codes for Chemical Looping Combustion. </p>
+     <p> Stewart, A., Lo, L.T., Korobkin, O., Sagert, I., Loiseau, J., Lim, H., Kaltenborn, M., Mauney, C., & Miller, J.. (2021). Realistic Kilonova Up Close. </p>
+     <p> The International Conference for High Performance Computing: Scientific Visualization & Data Analytics Showcase, Finalist (2021). </p>
+     <p> The International Conference for High Performance Computing: Scientific Visualization & Data Analytics Showcase, Finalist (2020). </p>
   </section>
 
   <footer>
     <p> Reach out to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing.<p>
     <p>Email: <a href="mailto:alexastew19@gmail.com">alexastew19@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/alexa-r-f/">https://www.linkedin.com/in/alexa-r-f/</a></p>
-    
   </footer>
 
   <script src="js/script.js"></script>
