Re-included the image files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>
       I am passionate about advancing our understanding of complex systems through the intersection of Physics and computational techniques. I am particularly excited about interdisciplinary collaboration and am eager to apply my skills to real-world challenges in fields such as computational physics and AI Ethics. 
     </p>
-<!--    <img src="assets/images/me.png" alt="Me" width="200" height="200" align="right"/>  -->
+    <img src="assets/images/me.png" alt="Me" width="200" height="200" align="right"/> 
   </section>
 
   <section id="about">
@@ -43,14 +43,14 @@
  <section id="education">
    <h1>Education</h1>
      <h2> Massachusetts Institute of Technology </h2>
-     <!--     <img src="assets/images/mit_logo.png" alt="MIT Logo" width="100" height="40" align="left"/> -->
+         <img src="assets/images/mit_logo.png" alt="MIT Logo" width="100" height="40" align="left"/>
        <p> Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022) </p>
        <p>
         Relevant coursework: Computational Data Analytics, Numerical Linear Algebra, Modeling and Simulation,
         Scientific Machine Learning, Machine Learning Data Analytics, Computational Physics.
        </p>
      <h2>  Georgia Institute of Technology </h2>
-      <!--     <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="90" height="40" align="left"/> -->
+          <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="90" height="40" align="left"/> 
        <p> M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025) </p>
        <p> 
          Relevant coursework: Mathematics for Computer Science, Differential Equations, Linear Algebra, Python Programming and Fundamentals, 
@@ -58,23 +58,23 @@
       </p>
    </section>
   
-  <section id="Selected Experience">
-    <h1>Resume</h1>
+  <section id="resume">
+    <h1>Selected Experience</h1>
       <h3>Los Alamos National Laboratory, May 2023 — September 2023</h3>
-      <!--      <img src="assets/images/lanl_logo.png" alt="Lanl Logo" width="90" height="20" align="left"/> -->
+           <img src="assets/images/lanl_logo.png" alt="Lanl Logo" width="90" height="20" align="left"/> 
         <p>
           Systematically determined bugs and installation issues of Accent on Linux VM and worked closely with developers to understand user-end software outcomes.
           Leveraged git, BASH programming, Spack, and C++ API to integrate Ascent with LANL-developed physics simulation code.
         </p>
       <h3>MIT Undergraduate Research Program (UROP), MIT Anderson Lab</h3>
-     <!--       <img src="assets/images/mit_logo.png" alt="MIT Logo" width="300" height="300" align="left"/> -->
+           <img src="assets/images/mit_logo.png" alt="MIT Logo" width="300" height="300" align="left"/>
         <p>
           Supported Machine Learning algorithm for discovery of new molecular candidates for laboratory work.
           Fully trained ML model using Pytorch and other relevant ML libraries for determining training/test data, cross-validation, and testing results.
         </p>
       <h3>Summer Student Finalist, Los Alamos National Laboratory, May 2022 — November 2022</h3>
-     <!--       <img src="assets/images/sc22.png" alt="Scientific Visualization Showcase 2022 Logo" width="200" height="100" align="left"/>
-        <img src="assets/images/sc21.png" alt="Scientific Visualization Showcase 2021 Logo" width="180" height="100" align="right"/> -->
+            <img src="assets/images/sc22.png" alt="Scientific Visualization Showcase 2022 Logo" width="200" height="100" align="left"/>
+        <img src="assets/images/sc21.png" alt="Scientific Visualization Showcase 2021 Logo" width="180" height="100" align="right"/> 
         <p>
           Implemented Visualization codes using ParaView and LANL developed simulations.
           Produced cinema quality explanatory videos on the domain science explaining to a broad audience.
