--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <header>
     <p> Alexandra Freeman </p>
+    <img src="assets/images/me.png" alt="Me" width="200" height="200" align="center"/> 
   </header>
-
   <section id="overview">
     <h1>Overview</h1>
     <p>
       I am passionate about advancing our understanding of complex systems through the intersection of Physics and computational techniques. I am particularly excited about interdisciplinary collaboration and am eager to apply my skills to real-world challenges in fields such as computational physics and AI Ethics. 
     </p>
-    <img src="assets/images/me.png" alt="Me" width="200" height="200" align="right"/> 
+    
   </section>
 
   <section id="about">
